
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timer_list {int expires; unsigned long data; int flags; int slack; void* function; scalar_t__ prev; scalar_t__ next; } ;


 size_t TIMER_OFFSET ;
 int memset (char*,int ,int) ;

void init_timer_buffer(char* buffer, void *func, unsigned long arg) {
 memset(&buffer[0], 0, 2048);

 struct timer_list* timer = (struct timer_list *)&buffer[TIMER_OFFSET];

 timer->next = 0;
 timer->prev = 0;
 timer->expires = 4294943360;
 timer->function = func;
 timer->data = arg;
 timer->flags = 1;
 timer->slack = -1;
}
