; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_41458.c_init_timer_buffer.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_41458.c_init_timer_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timer_list = type { i32, i64, i32, i32, i8*, i64, i64 }

@TIMER_OFFSET = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_timer_buffer(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.timer_list*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = getelementptr inbounds i8, i8* %8, i64 0
  %10 = call i32 @memset(i8* %9, i32 0, i32 2048)
  %11 = load i8*, i8** %4, align 8
  %12 = load i64, i64* @TIMER_OFFSET, align 8
  %13 = getelementptr inbounds i8, i8* %11, i64 %12
  %14 = bitcast i8* %13 to %struct.timer_list*
  store %struct.timer_list* %14, %struct.timer_list** %7, align 8
  %15 = load %struct.timer_list*, %struct.timer_list** %7, align 8
  %16 = getelementptr inbounds %struct.timer_list, %struct.timer_list* %15, i32 0, i32 6
  store i64 0, i64* %16, align 8
  %17 = load %struct.timer_list*, %struct.timer_list** %7, align 8
  %18 = getelementptr inbounds %struct.timer_list, %struct.timer_list* %17, i32 0, i32 5
  store i64 0, i64* %18, align 8
  %19 = load %struct.timer_list*, %struct.timer_list** %7, align 8
  %20 = getelementptr inbounds %struct.timer_list, %struct.timer_list* %19, i32 0, i32 0
  store i32 -23936, i32* %20, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = load %struct.timer_list*, %struct.timer_list** %7, align 8
  %23 = getelementptr inbounds %struct.timer_list, %struct.timer_list* %22, i32 0, i32 4
  store i8* %21, i8** %23, align 8
  %24 = load i64, i64* %6, align 8
  %25 = load %struct.timer_list*, %struct.timer_list** %7, align 8
  %26 = getelementptr inbounds %struct.timer_list, %struct.timer_list* %25, i32 0, i32 1
  store i64 %24, i64* %26, align 8
  %27 = load %struct.timer_list*, %struct.timer_list** %7, align 8
  %28 = getelementptr inbounds %struct.timer_list, %struct.timer_list* %27, i32 0, i32 2
  store i32 1, i32* %28, align 8
  %29 = load %struct.timer_list*, %struct.timer_list** %7, align 8
  %30 = getelementptr inbounds %struct.timer_list, %struct.timer_list* %29, i32 0, i32 3
  store i32 -1, i32* %30, align 4
  ret void
}

declare dso_local i32 @memset(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
